--- a/src/app/game/game-console/game-console.component.css
+++ b/src/app/game/game-console/game-console.component.css
@@ -1,3 +1,8 @@
+.type-faster-form {
+  display: flex;
+  flex-direction: column;
+}
+
 p {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
