--- a/src/app/game/game-console/game-console.component.html
+++ b/src/app/game/game-console/game-console.component.html
@@ -1,8 +1,24 @@
-<form #typeFasterForm="ngForm" (ngSubmit)="onSubmit()">
-  <p>
-    {{ sentence }}
-  </p>
-  <textarea style="width: 500px; height: 200px;" [(ngModel)]="userInput" name="userInput" ></textarea>
-  <button type="submit" required [disabled]="isSubmitDisabled" style="width: 75px; height: 50px;">Submit</button>
-  Test: 
+<form class="type-faster-form" #typeFasterForm="ngForm" (ngSubmit)="onSubmit()">
+  <div class="form-control">
+    <p>
+      {{ sentence }}
+    </p>
+  </div>
+  <div class="form-control">
+    <textarea
+      style="width: 500px; height: 200px"
+      [(ngModel)]="userInput"
+      name="userInput"
+    ></textarea>
+  </div>
+  <div class="form-control">
+    <button
+      type="submit"
+      required
+      [disabled]="userInput !== sentence"
+      style="width: 75px; height: 50px"
+    >
+      Submit
+    </button>
+  </div>
 </form>
