disabling right click

--- a/src/app/game/game-console/game-console.component.html
+++ b/src/app/game/game-console/game-console.component.html
@@ -12,6 +12,7 @@
       name="userInput"
       [(ngModel)]="userInput"
       onpaste="return false"
+      oncontextmenu="return false"
     ></textarea>
   </div>
   <div class="form-control">
