--- a/src/app/game/game-console/game-console.component.html
+++ b/src/app/game/game-console/game-console.component.html
@@ -11,6 +11,7 @@
       rows="5"
       name="userInput"
       [(ngModel)]="userInput"
+      (keydown.enter)="onSubmitUsingEnterKey()"
       onpaste="return false"
       oncontextmenu="return false"
     ></textarea>
