--- a/src/app/game/game-console/game-console.component.html
+++ b/src/app/game/game-console/game-console.component.html
@@ -1,3 +1,4 @@
+<h3 style="text-align: center;">{{ userName }}</h3>
 <form class="type-faster-form" #typeFasterForm="ngForm" (ngSubmit)="onSubmit()">
   <div class="form-control">
     <p>
