--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -10,4 +10,5 @@
   <h2 *ngIf="isTimerVisible">{{ counter }}</h2>
   <app-game-console *ngIf="isGameConsoleVisible" [userName]="currentUser.name" (receivedScore)="updateScoreOfUser($event)">
   </app-game-console>
+  <app-result *ngIf="isGameOver" [user]="winner"></app-result>
 </div>
