--- a/src/app/game/game.component.css
+++ b/src/app/game/game.component.css
@@ -1,8 +1,13 @@
 .game-console {
   height: 75vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.available-username-info {
+  padding: 5%;
 }
 
 .btn-play {
