--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,4 +1,7 @@
 <div class="game-console">
+  <div class="available-username-info">
+    <span *ngIf="currentUser && (isPlayBtnVisible || isTimerVisible)">{{ currentUser }}</span>
+  </div>
   <button
     type="button"
     class="btn-play"
@@ -8,7 +11,12 @@
     Play
   </button>
   <h2 *ngIf="isTimerVisible">{{ counter }}</h2>
-  <app-game-console *ngIf="isGameConsoleVisible" [sentence]="gameSentence" [userName]="currentUser.name" (receivedScore)="updateScoreOfUser($event)">
+  <app-game-console
+    *ngIf="isGameConsoleVisible"
+    [sentence]="gameSentence"
+    [userName]="currentUser"
+    (receivedScore)="updateScoreOfUser($event)"
+  >
   </app-game-console>
   <app-result *ngIf="isGameOver" [user]="winner"></app-result>
 </div>
