showing user info on the header

--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,5 +1,8 @@
 <div class="game-console" *ngIf="!loader">
-  <h3 class="user-availability-info">
+  <h3
+    class="user-availability-info"
+    *ngIf="isResetBtnVisible || isPlayBtnVisible"
+  >
     {{
       isResetBtnVisible
         ? "User Slot Unavailable"
