--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<app-header></app-header>
+<app-header [currentUser]="user"></app-header>
 
-<app-game></app-game>
+<app-game (userDetails)="setUserInfo($event)"></app-game>
