--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -2,4 +2,24 @@ header {
   background-color: #dfdfdf;
   padding: 1% 0;
   text-align: center;
+  display: flex;
+}
+
+.game-title {
+  flex: 1;
+  text-align: left;
+  padding: 0 10%;
+}
+
+.user-info {
+  flex: 1;
+}
+
+.user-info > ol {
+  margin-right: 20px;
+  list-style-type: none;
+}
+
+.user-info ol > li {
+  padding: 5px 0;
 }
