--- a/src/app/game/game.component.css
+++ b/src/app/game/game.component.css
@@ -15,3 +15,21 @@
   width: 150px;
   text-transform: uppercase;
 }
+
+.waiting-for-winner-loader {
+  display: flex;
+  flex-direction: column;
+}
+
+.waiting-for-winner-loader > p {
+  order: 2;
+  color: #9e9e9e;
+}
+
+.waiting-for-winner-loader > app-loader {
+  order: 1;
+}
+
+.waiting-for-winner-loader > app-loader ::ng-deep .loader {
+  margin: 0px auto;
+}
