--- a/src/app/game/game-console/game-console.component.css
+++ b/src/app/game/game-console/game-console.component.css
@@ -43,10 +43,5 @@
   padding: 6px 12px;
   font-size: 14px;
   border: 1px solid transparent;
-}
-
-.btn-success {
-  color: #fff;
-  background-color: #5cb85c;
-  border-color: #4cae4c;
+  cursor: pointer;
 }
